test/libsolidity/syntaxTests/constants/constant_with_visibility_inverted.sol
uint constant public y = 7;
// ----
// ParserError 2314: (14-20): Expected identifier but got 'public'
